# ai_automation

./: .gitignore  CANVASES.md  README.md  pyproject.toml
canvases/: README.md  hands-on-automation-learning-portfolio.canvas.tsx  pair-software-ai-automation-portfolio.canvas.tsx  pair-software-star-stories.canvas.tsx
deploy/: Dockerfile.rag  rag-requirements.txt
docs/: CODEBASE.md  PREPARATION.md
integrations/: README.md
learning-portfolio/: README.md
projects/dspy_ticket_classifier/: __init__.py  __main__.py  classifier.py  samples.json
projects/labs_common/: __init__.py  openai_env.py
projects/loan_workflow_mock/: __init__.py  __main__.py  app.py  models.py
projects/mcp_runbook_lite/: __init__.py  server.py
projects/rag_operational_domain/: __init__.py  __main__.py  app.py  rag_core.py
projects/rag_operational_domain/data/: orders.csv
projects/rag_operational_domain/data/playbooks/: irrigation_timing.md  maize_nitrogen.md
projects/rapid_brief/: __init__.py  __main__.py  app.py
projects/transcript_insight_pipeline/: __init__.py  __main__.py  extract.py  schema.py
projects/transcript_insight_pipeline/samples/: sample.txt
scripts/: smoke_test.py
